# pdf-assistant-ai

./: .gitignore  .replit  backend_core.py  flask_app.py  main.py  pyproject.toml  replit.md  requirements.txt  start-local.bat  start.sh  streamlit_app.py
.streamlit/: config.toml
artifacts/mockup-sandbox/src/: App.tsx  PdfSummarizerAgent.tsx
