[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "openai>=2.31.0",
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
]
